bug 181697: <li> prevents phrasals from closing when its end tag is not used. r=bzbarsky sr=rbs